refactor(front): updates background gradient for mobile/desktop (#901)
Closes: #901

--- a/front/src/lib/styles/base/colors-dark.css
+++ b/front/src/lib/styles/base/colors-dark.css
@@ -18,6 +18,7 @@
   --grape: #231151ff;
   --eerie-black: #1a2018ff;
   --oxford-blue-a50: #0e0f247f;
+  --blue-rock: #0f0f1cff;
   --oxford-blue: #0e0f24ff;
   --rich-black: #0f0f1cff;
   --rich-black-a30: #0f0f1c4c;
