--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -31,33 +31,12 @@
   position: relative;
   align-items: center;
   z-index: 1;
-  padding: 1rem 1rem 0 1rem;
-  @media (hover: none),
-    (hover: on-demand),
-    (-moz-touch-enabled: 1),
-    (pointer: coarse) {
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-  }
-  @media screen and (min-width: 480px) {
-    padding: 1.25rem 0.75rem 0 0.75rem;
-    @media (hover: none),
-      (hover: on-demand),
-      (-moz-touch-enabled: 1),
-      (pointer: coarse) {
-      padding-right: 1.5rem;
-      padding-left: 1.5rem;
-    }
+  padding: 1rem 1.5rem 0 1.5rem;
+  @media screen and (min-width: 480px){
+    padding: 1rem 1rem 0;
   }
   @media screen and (min-width: 640px) {
-    padding: 2rem 1.75rem 0 2.25rem;
-    @media (hover: none),
-      (hover: on-demand),
-      (-moz-touch-enabled: 1),
-      (pointer: coarse) {
-      padding-right: 2.25rem;
-      padding-left: 2.25rem;
-    }
+    padding: 2rem 1.5rem 0 1.5rem;
   }
 }
 body.ready .header {
