--- a/front/src/lib/styles/base/layout.css
+++ b/front/src/lib/styles/base/layout.css
@@ -172,7 +172,27 @@ body.ready .header.scroll-transition {
           color 0.5s;
         border-bottom: thin solid;
         &.cc-link {
+          display: inline-block;
+          vertical-align: top;
+          opacity: 0.8;
+          transition: opacity 0.5s !important;
           border: none;
+          width: 17px;
+          height: 17px;
+          &:hover,
+          &:focus,
+          &:focus-visible,
+          &:active {
+            opacity: 1;
+          }
+          .icon-cc {
+            width: 17px;
+            height: 17px;
+            color: darkred;
+          }
+          .fil0 {
+            fill: red;
+          }
         }
       }
       img {
