--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -127,7 +127,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  opacity: 0;
+  transition-duration: var(--transition-duration);
+  transition-property: opacity;
+  transition-timing-function: var(--transition-timing-function);
   margin: auto;
+  &.loaded {
+    opacity: 1;
+  }
 }
 
 .scroll-top {
