build(front): refactors syntax theme colors as css vars (#925) (#691) (#692)

--- a/front/src/lib/styles/components/Code/Code.css
+++ b/front/src/lib/styles/components/Code/Code.css
@@ -46,8 +46,9 @@
   }
   .title,
   > pre {
-    @apply dg--transition-effect
-      transition-colors;
+    transition-duration: var(--transition-duration);
+    transition-property: color, background-color, opacity;
+    transition-timing-function: var(--transition-timing-function);
   }
   .title,
   .language {
