--- a/front/src/lib/styles/global.css
+++ b/front/src/lib/styles/global.css
@@ -18,13 +18,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (prefers-reduced-motion: reduce) {
-  html,
-  body {
-    scroll-behavior: auto;
-  }
-}
-
 :root {
   --white: 223, 224, 224;
   --black: 19, 19, 20;
@@ -58,6 +51,8 @@ html {
   transition: background-color;
   transition-duration: var(--transition-duration-md);
   min-height: 100%;
+  overflow: clip;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -66,22 +61,18 @@ body {
   flex-direction: column;
   align-items: center;
   transition: scrollbar-color 1s;
+  padding-right: 7px;
+  padding-left: 7px;
   height: 100vh;
   min-height: 100vh;
   overflow: overlay;
   scroll-behavior: smooth;
-  scrollbar-gutter: stable both-edges;
-  scrollbar-width: thin;
+  scrollbar-gutter: stable;
   color: var(--fg-clr);
   font-size: 1rem;
   line-height: 1.5rem;
   font-family: var(--font-psxl);
-  @media screen and (min-width: 480px) {
-    padding-right: 7px;
-    padding-left: 7px;
-  }
   @media screen and (min-width: 640px) {
-    scrollbar-gutter: stable;
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
